--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
+  background-color: #f7eedd;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,4 +11,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root {
+  /* colors */
+  --color-background: #f7eedd;
+  --color-primary: #008dda;
+  --color-secondary: #41c9e2;
+  --color-tertiary: #ace2e1;
+  /* font sizes */
+  --font-size-title: 3rem;
+  --font-size-paragraph-big: 2rem;
+  --font-size-text-small: 1rem;
+  /* font weights */
+  --font-weight-md: 700;
 }
