--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  /* hide scrollbar */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
   background-color: #f7eedd;
   background-image: url("https://www.transparenttextures.com/patterns/cardboard-flat.png");
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -18,6 +21,10 @@ code {
 }
 * {
   margin: 0;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 :root {
