--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-around;
   width: 100%;
-  height: 8rem;
+  min-height: 7rem;
   background-color: var(--color-tertiary);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
   border-radius: 0 0 20px 20px;
