--- a/src/pages/main/MainPage.css
+++ b/src/pages/main/MainPage.css
@@ -3,9 +3,10 @@
   display: flex;
   flex-wrap: wrap;
   background-color: white;
-  height: 90%;
+  height: 80%;
   width: 90%;
   border-radius: 20px;
   margin: 20px auto;
   overflow: scroll;
+  flex-grow: 1;
 }
