--- a/src/pages/main/MainPage.css
+++ b/src/pages/main/MainPage.css
@@ -10,3 +10,32 @@
   overflow: scroll;
   flex-grow: 1;
 }
+
+.main-toolbox {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-flow: column;
+  width: 150px;
+  height: 100px;
+  position: absolute;
+  left: 0;
+  background-color: var(--color-tertiary);
+  border-radius: 0 20px 20px 0;
+}
+
+.main-sort-box {
+  input {
+    cursor: pointer;
+    margin-left: 10px;
+  }
+}
+
+.main-search-box {
+  width: 130px;
+}
+
+.not-found {
+  margin: auto;
+}
